updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an aspiring Software Developer </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and raised in Fort Myers,FL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include</p>
+      <ol>
+        <li>eSports</li>
+        <li>Disc Golf</li>
+        <li>Rock Climbing</li>
+      </ol>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a Software Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Dallas,TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have a passion for coding and I feel it is the best way to enter the field of programming</p>
     </section>
 
     <footer id="footer">
